@@ -1,4 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST egypt-1.9.tar.gz 4607 SHA256 f3be611a97373f92b63f286ea17e4aae23ad62d75938e009448e9b70d97791c7 SHA512 ac2317ed9b34b68a27dde96fb7f6c9230ad6014b761bb2179e26a8e06c588efbb7fe3977ee6b68d2801b117b62f4948bf1584bd4e2d415fb1f1a5c4ad4e06117 WHIRLPOOL 0a5b71bae148daebfca9e7bdb2ad73cba2f8a9d309fcdbb6e3d3de57c279f59af2b5c25d3b63ac33b751dcf5e3c81074e18d68a812903310a5e302274175b48c
-EBUILD egypt-1.9.ebuild 461 SHA256 1812c6fc35aec729368e85f63b2f7d82686d5a3725f49665cf1c671776a6086d SHA512 0e36d624db15b32639fd227974063d31ac59c5d06191735dfa443387ff5eea03218a9a482f86226a1f7378121f935cd45de138141cbd4227ab5cd347aa6b4fca WHIRLPOOL e4fa7763d129488c0867a1aa3bc2f03d0d42733a2de75fb5c280fc3e1a5addeaea19b41d0005bd46a84a94a10a8a2397765be95333e8410798715f2f580d5618
-MISC ChangeLog 877 SHA256 d79c6acf49294cada75a6d3bccae88ca44e7ba737895901c6a537a217a8e9c90 SHA512 d0fb0b23fd0879d00b6fafc1dac968a6f216584507268b17863ce142399d64fcbc04125dbc9a805c9791b3d878f446d620603df59b18cfbdb1403118311afef4 WHIRLPOOL 03ca29a6e14bc409c1dd157ba460fc37715603dec82684ed741bebf757b7731df4aa6061d31238268f438e78ace295cf8dd58022108232d2de8565592fded356
+EBUILD egypt-1.9.ebuild 474 SHA256 108bde4705459196b177dd1c55a447a778d8b679dc8114ed02bcedbe2996b5de SHA512 e4d605395574b49f4279d1cb310d4e3b91905b0993434fbc94f50e7ddcc0c035874846b6f04bbe5f97628b90cfa72a2dad27e82fbc953ad53a979a2aa6fdb2d9 WHIRLPOOL d4261c8cd27d3f8dfeb48ea661296001112a0026bb9ffb0f926c51851227340a819ef91e2de938840c1cb00dcb7249534ca97b47b308d3781e2835f6d3cc3fb9
+MISC ChangeLog 1038 SHA256 b1304782de886a6a1da0084226d59faabd234205f1a24023e02d1c3e94dd137f SHA512 5bcb547cc9cb0765f7d9c7ef89e1f9fd8c7b58eec4d5dfb9ca9c02c6d6f5a12e10906a14bdd6674caa7c2f6887e8da07b10e70f4c6b5dd3c3724130c92b5f7f6 WHIRLPOOL bb0e272d9b9f3ae2fcffa4ee0d56ca84fc7d8fe1f821b2c24d75211c86f9e639f61e01f4e1c50c4f55fc796ac8f05f018442ed71fe2d44c9dca3f8be8af8f9a3
 MISC metadata.xml 268 SHA256 2089ca59285b2836a6ec1d5aef27f83d580e922212301f0b1eadb04400eb45eb SHA512 8e365ead118785104bc7576a48a106346ef24f5b709349f8ca3d5fb9107a248d0f172e6898fb4ba4b2b7f84e6c8c7960578a2919e1a3692664cb808b16e6b2b2 WHIRLPOOL 255e754b42ff038b07a48321ced9fe6f8acdc99bb85873807b3e902517a1764dabc7152e5ca9ad4d83ab5dc9d3a611f79e6c066121be77aed3cad1b0f3587b73
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQu37GAAoJEDxpGckxwJCBTL4P/i911Px5BcIU34FZNW6WJ+Nh
+0I0T48BCDNsSxg1ZGguaWcgpjEvSDHQrRDlqtYx4p3FevuOqtzo4QpNfI8UlPrBe
+D/D/1sbQ3JvPpJJ+DKNlPzjAXJ5iWUSU+7FQc4s9M4JVbwYC1VeIu3XAbBHgF6zB
+HXMn+ML1MHyqRB0uNj8liRMz39+ehUaUMxd6RLdZ4xUX1yWTVuE/DfZI1rs+FIVJ
+0SI4d5YvZVIDOgBwzWCTHbt6cK6Jzkle9loHkwO9TaBf4XJFtWiPmvREMWdgrABv
+33SS/PTpfMEbRLVUp16kRkxs5jqQu11QkOb790wv1e+qOBkT384rqL68YDrKN18F
+eubqcOnkYfFHruV1FTwsl8ODQm0kKF/TST+G9NQQc4CFLHetipzJuIMyPIVJgzQ6
+C+kuz8JUkoZOowDkW54h3SVcyS1lcgOQsFvVP9iEY3hwl43grZYZNva1Il2/5HaO
+NlJmR1aIsfukakfctixYBTkM9kkUe52O/m5MZ+Fsxanv8jTPJzpUkEpus1mtYnpj
+V6hwkneBFicyDmI8qFtMcs7OsbuZKSrnHPnRm2l5+yUs7l2TIV3p6XxELwpqhw8V
+VFSCxrigsxCvEXOzmFsF9SbmrULuHzZ9Xinxe/MHcL7YKg+hDcgWOOFku5wYwBdx
+bUX1AfFNsGfXyEJBcxDa
+=ntPb
+-----END PGP SIGNATURE-----
