@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/egypt/egypt-1.9.ebuild,v 1.1 2012/03/14 05:41:08 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/egypt/egypt-1.9.ebuild,v 1.2 2012/12/02 16:14:41 ulm Exp $
 
 inherit perl-app
 
@@ -8,7 +8,7 @@ DESCRIPTION="devilishly simple tool for creating call graphs of C programs"
 HOMEPAGE="http://www.gson.org/egypt/"
 SRC_URI="http://www.gson.org/egypt/download/${P}.tar.gz"
 
-LICENSE="as-is"
+LICENSE="|| ( Artistic GPL-1+ )"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
