@@ -4,24 +4,14 @@ Hash: SHA256
 AUX pidgin-2.10.0-gold.patch 1003 SHA256 26657c717f4e624b0b3af8746b61b0861ba4da65e55e49a753cfefaba72c60cb SHA512 9c54d1da082362325aa5ec0f25356e629adb7f639a0ea98a8aff726e4769cb21bf3350772aa219b7ad021630d13113de02c42317551edfe5f044ae40ac0df984 WHIRLPOOL 77fdb2855ac8fe3dc163a42d18df1847f849d9fc42cb09565746e70e72f9e2f74f3d33f44c6bc6f8277047d6d05bb9f12507a8f8c16e1c672c201a75c8fa7c8b
 DIST pidgin-2.10.4.tar.bz2 9970850 SHA256 8fbef835c8dfa2281532ad7064d664477d72015d6dcd4345362dcfe658aaee0e SHA512 8399a1f8f48aabcd598fa03b80680d230bec26ee7cf616373ddfbf174e214d60ecfc37f82130258bca6cca0717ac2d3deb843e7e95907b75fef5b7433d9674be WHIRLPOOL f257a9e387360ba66d66d51d4d7b13dd74fd4f68f694c098e3b17d5dc46807e89511187ca7d61c3232453b24bf1e1151afcb974c9299cad18c126cbaa7410940
 DIST pidgin-2.10.6.tar.bz2 10007092 SHA256 3e25a633b97cbfa8326999a30282e7a662a9b9bbf2853be84af0b8fb60392c96 SHA512 fffc8721ebe5dbaa53c213ec07a6ad5045ba336829cf9bce11aef8b5968f0f0b49289cfe1818e183a3807b6b8b7ebb75387a81d7135835859e0188a05f3be1ef WHIRLPOOL 7d044ad2cad68e223c3c20d867b4ebf23956982b9ecbc1f91264857abea2555b6ae07b963671eaa49fd2b85d648b6f5692c561e0cc060fb0762458880b5e9145
-EBUILD pidgin-2.10.4.ebuild 7046 SHA256 f4fbd5d894cd3f1f7f8f126519d1d0e2c56b14c65d5fd42d50357347119d5099 SHA512 960754e9e23749bed1676a7a237328e1145068f5081c15a2ffb8dca59f2856c18a40e0498de07552cd73b5d0bc86583d7343665e31e42b895c0ba5f7a3d804ce WHIRLPOOL 4d88e2305f9c652bc647fcb09a8f6fb6fc2430a86a4c36d0db047189e95b4f4e007eb141f95d999f6e7208884d9fb7b605979710e7cde7228026b376661fb7eb
-EBUILD pidgin-2.10.6.ebuild 7050 SHA256 a8e66f92ffbb48f7d30094cc4889246182064df476c93cca067c94fc1e43911f SHA512 518619ea969e573b7cac82d0fb3921806501234652e0ba9dfeb4f50c3f86dd22069a26141ca796b809f36c9a411ae1932450370f3e0670eacb8f2156d9cf7f5b WHIRLPOOL e843712fdc784710371e84ff8de0c3c7966e05029c3c8bb57910ca0cc68faf9b62eacef3b96ec5681bfe2c69a8550c84373fb8c3f33c2277438e1f3b70b1c0e0
-MISC ChangeLog 41350 SHA256 ea35d3d0acda22ba6c4720a2f748a86644a170ffb4137b93049fb59bcd28782e SHA512 0faef47f44622c48970106523066d3f4da4e58ba506e55525a82fd7b5853f099107b3f4ea5f72da86064c73d27e6ba4c88593cc56b7ff47f442ec878f8916cc1 WHIRLPOOL 00c8e77ae6364329b19505ec7fd98293cec783872a9712c2c99c3d5dac9858860138a240a887c687e5b6e99d5e9e8a0692351c7a74234e64aa7ca6f67583c363
+EBUILD pidgin-2.10.4.ebuild 7053 SHA256 a168136b16ee9fe6f86e92ea1f32f1d09133dabfc7d6f9cef2501102abd31dbe SHA512 a2c97bc2079da1f271d2730539c199692fd72fb48e233728a8961b34f78303841b19c1ecdd4eb6a1e8f2578987f677680ae26456fa912ec871af68a7a30ba0d3 WHIRLPOOL ca5f36087a9764d57631b11f5a6d6a6b5941cfa9a731e39268835d88214b736889832585c6741d16f344f2b8b17874b0a09789eb734aedb1e6160bd0d5dda54e
+EBUILD pidgin-2.10.6.ebuild 7053 SHA256 1cf8b7929b2b37d5c372c93eda3e87602306f51b0e05308566bef0a7ab87d086 SHA512 423db41938328383e7a9cd959c0066d910b04727a938dc9d81b66a33f939d84133a39dbb09c8ecc17aadbfa9e69be9bf5897dd35e630fc7e357819031a48e8ef WHIRLPOOL c748b70a37f8dd6e7678dc13e8d304c3d933645c8ef4c7d56ab6b86d39a49f4c009f5411e5422c513ec2f953454cf8e1b7841e769a2c7889ea015466de4655c9
+MISC ChangeLog 41474 SHA256 3499fb9c25b437d22756eb13befab9a76c5685a13108a169fe2ea91f435097e9 SHA512 7762d5e13e7963fc46e59d65433d0bc886eb6a5125f1a0727688a68b677416928400f7f549200dbcbbb5adc3f731a92b091ecc0299f8d1bf3b2cfe4baec08643 WHIRLPOOL f189c5840c422bf8bd715f4474284699dcbff70dee4dfa3cdc2ae3be8b61b9483694f5601e0126cd29f812ba3fe70abc10f1290c168c3509873d9ed5be134f94
 MISC metadata.xml 1311 SHA256 a0253264c64bdd1a4623db7f223cae50450dc8577d74748c25974ca909b80875 SHA512 18570fcf43047336441fd79d0581f6d7010192358a5dfe1d88d29ae33780c44fbc55d26d2c6088f615a87fa4131d729945cb0789941e8470948fc01b3f3f61f1 WHIRLPOOL a716b9e0682c6a56361e2bd6d788eaa8ce35a59aa701b1338a29bb2e34af1be9f579c52ff7698bedd888f7461a32a5abd59bddd95cc58d4633e20e3a394c478e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQWxNNAAoJEF0huFKJUZL5AwcP/0h3+PoQ4mUenTgVte72IeSI
-HyfnT/rPheFNOAcxiCp5TKpVZiMVN5tiersw0P9l3eDpwhB/nXtDR7cbMA76/tAj
-nQ1f+CN8awN1zJ9JRC/zsMAsZy4jwYfuXTSb7iLPGUvlIv5dtC5cheXy9GLu4XoK
-LyWPtNGvB/nE4Fx+T7xuRmm0Fnm5lfBj156Q1mt5yxRxkyKWVhCtqhVem9LoFrh5
-mGH5ZBALPxYKq9FxDC8Eq5SMfsr8wq4GR58QoKQa54iV02DGx9ewVPiaUsz2TepN
-VhuxPH6EzuKus9/iGPe/HL9CG0B2qgH3DdbWyvnGYJe9Iirpr+ssKWLlqK+vpg25
-IROZbw+dFiLsfAppxSxyzwlsuLq5NfkAVBh8ElFPN4h3yLl9OSR3KYLsHoKAyw0n
-OLDEIwxfexa/4MEUGB4aG6cs4ByC3yTVcAzVpKriOFCTHajMz4LRuL0VqJ0hlTnG
-Ldc0o5offy8CgEu7VKZbOEfmhHkyw667RDCz5XZCJHO6/fWVWgWzoH9CTtYKXPwq
-p3kaQSTywBz08UdVEpCPQwdp2K5Q+O+R7GTNBkzCwLeI+RnNIwNylwjudbNbCDYs
-pZSuLuU3LICHiF69PM4Dst1AJuIu0fkAIB6QGKQ7YS7Uy6fwtbSACYsYKMAEVKoG
-xkA80/oAJg86TN83OSbw
-=qIwm
+iEYEAREIAAYFAlC7iBIACgkQ1fmVwcYIWAbYMwCgplUpDJkf1SQ9T4XtfXrwnEr8
+ocgAnRSy1HuS/6fhE1Wt0mSasJqefwrO
+=VNbA
 -----END PGP SIGNATURE-----
