@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/pidgin-2.10.4.ebuild,v 1.7 2012/06/08 18:02:48 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/pidgin-2.10.4.ebuild,v 1.8 2012/12/02 16:55:45 eva Exp $
 
 EAPI=4
 
@@ -41,8 +41,8 @@ RDEPEND="
 	gstreamer? ( =media-libs/gstreamer-0.10*
 		=media-libs/gst-plugins-good-0.10*
 		|| ( net-libs/farstream net-libs/farsight2 )
-		media-plugins/gst-plugins-meta
-		media-plugins/gst-plugins-gconf )
+		media-plugins/gst-plugins-meta:0.10
+		media-plugins/gst-plugins-gconf:0.10 )
 	zeroconf? ( net-dns/avahi[dbus] )
 	dbus? ( >=dev-libs/dbus-glib-0.71
 		>=sys-apps/dbus-0.90
