@@ -26,14 +26,24 @@ DIST cups-1.6.1-source.tar.bz2 8218340 SHA256 5842ab1144e653160fe667ee78b932ee03
 EBUILD cups-1.5.0.ebuild 8250 SHA256 0e7967449e58ad9c385154c93c7dd35cd211f8dd0624a7409843601e3ab6802f SHA512 725b0b632a55a227177ee6313d8ce21ff49ede6aa2cdecc62448069ad85dd979a8643e49054ee695408c66c46de7eb2d42c37cf411363be0fe638d1ad68d6829 WHIRLPOOL c11ebd1fa34492e7af49e8e0e3e131abd244529e7331c7a3421cce84777b44108f3e924fbaf7a86f3e031a0b8579f0e14580993e5063f3e6672d8d2b37e2badf
 EBUILD cups-1.5.2-r4.ebuild 8421 SHA256 ce3c4b59de12421bef0918ac4f6c47b7b3dccca820f29c92311ee738e34415c0 SHA512 c142b72652c27ccc8fca9653f9c4c34d971cc94d6cabb3ef54c46d126b5b03d0a627f2a4461637c443ec5fe52619f66f93f493af80a87b7d5eb8bb7a129e40c2 WHIRLPOOL 91cfdcc8499d4dc539f1fc60743eafc1cb3842032c6cbf394963e980b73e698d902df972b716433781782f1558cbaa9005345ebe382a6fdd55509e65df0a42de
 EBUILD cups-1.5.3.ebuild 8683 SHA256 93862c6bf66eb1003dbfef73cd1e199be45cfad8fcd5e1b36a6bc298e6fb3e6c SHA512 b44d3d5cdc343fe3686b6b0accc48ac44db76fc0d8b3562aa47b1a018cec1a8e9ae46cf7b0b1b1f47df4ff3bb9d35dbc1831cb5e4e94f620ecfcea3ae181318a WHIRLPOOL f39c84f449084790e1382283851a4a750dc01c0929fe0a20b6dca9a8635289bcefb3686c6d6de3b8453e2f718aea48769018701acd2618b71911df2424296dbf
-EBUILD cups-1.6.1.ebuild 8286 SHA256 8b4f6e65c76af1f55d85506f89be908f00eea99c28490d7bd0120470a9873817 SHA512 620d52ac5c48926c6a5d3e679952974824dff28b7f5e33aaa7d68baff282d812fe99fcc05a36d2945748a32a6709ab4a8cc04751c8782f25b7745c1f76bb506f WHIRLPOOL a2f6e37bb8347bf15d9fd2caba96d04aef68001101211ab66a8e3e9e6c29e8f577e42aea7ccf3532cc94d67281375c98ea8e2e9d409e5ed48403dc8bfb762a4a
+EBUILD cups-1.6.1.ebuild 8294 SHA256 bb18c9e8b57f0ed6cbef1353dffcb31b55b7117c7ca0e9e4440c2bc524654503 SHA512 dd75747112c63c426f41b94eaf6a0ad7844cbca0da99e37c65c0e9b71322aea0e97292f6b0dffa6a65fa42ed60263a85611c4e5f7ab16eb44e8f23427ee8a2a5 WHIRLPOOL e26abfabd59e8ae3d3c1ac67f9702f95513ab7f76f4003dee969d653c778244a78dfb6b8a1173074f765caa0f72b909f57adb3f3288f2f317d4699a8c4fcc4cb
 EBUILD cups-9999.ebuild 8283 SHA256 c9a700e41a3eb06e338f7e5769a6071f500be00ce1b0beb174bf31ae1410abfb SHA512 d42ecd107ccee8a286035fcc4beae73c4711e36b741d7433fb3c13a1210985a669b8f97e9b689815c07c29bb811ba68028923b9d79a000860e2a7ca712f51407 WHIRLPOOL 7f2141ed1495e861b6393e5c256b73e91dad342620a0007b1a272f715f1d3ae74f2b7f56ecec5a08d7d0bbbe817101779319dd28184528b94da4881fa296e8b3
-MISC ChangeLog 78573 SHA256 62a735ce133571072f0895a95fc77a41b3ad5b73b0b04e336e9c7cd086e917dd SHA512 2afcc739b36667bca29f3f286d0314e7649ff464f4ee555ef7e4a8715b7066b05a875b6875e4ba29e6e6bfb0839b8090e3bcaaf15eaa21605cd703306aaad412 WHIRLPOOL d9cbe699b88dc60f31228b9f4c213eacbc448836bd5bb8a54b503d255f81d2672d64cfdb2321d42918dd617b88dc08a84ace4e03a73ca0e65531dfa2e9a82294
+MISC ChangeLog 78687 SHA256 45696e56ff23d7bdc66828b5131fb0b3e70d61608e42e026e9bffd7d3abbeec7 SHA512 c1e8639a8768d47f304dca3962bc5ee28cc5f8bfc35e1523296200f958c5c81ddc1a921d106463e4a5d819016c9055d47b35ad5d8857f79b3e5f711aee95dd2f WHIRLPOOL 95b849e3fc5623d3ad4e9c4b697af7c9b65660ad24b63ccc2859c53118c6ff33481fa7269d13c018f87d724b460457f8c5fea9210cbb6107067a8efc707ec840
 MISC metadata.xml 778 SHA256 26a8d1221a4334579f98705c38f3e3a882c223df86181dcf7968eac2118188b8 SHA512 717b6c3d940b2de149a68bb1c66175cd6fac04e21fcf581d6f1dd248c1bc5ee8fb98ec26a1fa2fca94e8fcb33f131c6635d40a6954721020a989dc260e8b8fbc WHIRLPOOL 057426e3c3f1e7e5a6bb124e0af0d804e15f6bbf17f7b278ef90d773f997beed6c6376bcc9603ac4c67f75675a33bc1fb7a02bb89f7a1ed69634a5d7bf9befbb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlCZF9oACgkQvFcC4BYPU0pujwCfc6oc+jNoazoBzCH23LXLHcYj
-xmAAoIRWkgVC7wbMxJCA47Rnru1JIQWO
-=TcSX
+iQIcBAEBCAAGBQJQvEdbAAoJEOSiRoyO7jvodEYQAIEmIsO/CeorzbrwfoXtxwLu
+0f6S41XbYNeWkVCqt/ChtbEWxWA2NHGKwRZ4VFrHPNZeB7H7x855UZrmOJUQwFG6
+PsGkQ8u4blkioPs/UoIoq8Qr5qzblVkjItNElDzYgDw3ykEg+vsEEjcfTqb59Xby
+KVS5suC/swZZY0wZVbgoWNTuRT1YoooFAfSHInDCQuptls/HXaHZBR2cpBaZpZX4
+aLGIPUn+4LN6FEFhqyOAEe6rvTHMYlUz9WYOL3R2oUDc6Jkdbk+nfuPTwl/KIaVH
+tJ2unu79vsost5MU7Q6wWPnsspGyqcf5qbZa4aIOsNoIXnnjFFvVZwKpzJE59RFV
+FT/DyhFva1QJtL4bYx/1QeJgdg6ZUWZzpLJdTgtkYJUb/ftCyaf8sA74gALPwm4t
+34PYJ4InLasbYe+z5XwvLK1CSbomdvCPp4LFTMJWTcglFToYzbPt/s7+e6LFiSll
+p5IIvV/VUyhj+WPcUm4P5yH5UvpmvgKcOsJtp7ICLA/yGHSfyW4uWd56sH9Vq9wi
+R8PaZHhDPSLrvLUx/inIC217PEVE8ryfg2UVINjeg/611POqOe0rGbh8bKMkmxtK
+RHt2wJ5P7xlqOD4dfWY9JESGCHshS4qxK0bgYrYJpgZh3a+ZjPmzhYqzR0D3jBeq
+URUXk59Wdvsz3CwafW31
+=xx3E
 -----END PGP SIGNATURE-----
