@@ -1,6 +1,10 @@
 # ChangeLog for net-im/pidgin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.293 2012/09/20 12:59:24 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.294 2012/12/02 16:55:45 eva Exp $
+
+  02 Dec 2012; Gilles Dartiguelongue <eva@gentoo.org> pidgin-2.10.4.ebuild,
+  pidgin-2.10.6.ebuild:
+  Pin gstreamer dependencies.
 
   20 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> pidgin-2.10.6.ebuild:
   ppc64 stable wrt #425076
