@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/egypt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/egypt/ChangeLog,v 1.6 2012/05/10 16:03:37 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/egypt/ChangeLog,v 1.7 2012/12/02 16:14:41 ulm Exp $
+
+  02 Dec 2012; Ulrich Müller <ulm@gentoo.org> egypt-1.9.ebuild:
+  Fix LICENSE, this is licensed "under the same terms as Perl itself", see
+  notice in source.
 
   10 May 2012; Agostino Sarubbo <ago@gentoo.org> -egypt-1.8.ebuild:
   Remove old
